--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "js/index.js",
   "scripts": {
     "build-template": "pug templates/index.pug -o .site",
-    "copy-static": "cp -r static/* .site/",
+    "copy-static": "mkdir -p .site && cp -r static/* .site/",
     "build-css": "mkdir -p .site/css && uncss -H .site -C . -s node_modules/bootstrap/dist/css/bootstrap.min.css,css/style.css < .site/index.html > .site/css/style.css",
     "build": "npm run copy-static && npm run build-template && npm run build-css",
     "deploy": "npm run build && gh-pages -d .site",
