git+https should not require auth

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.2",
-    "jolharg-theme": "git+ssh://git@github.com/danwdart/jolharg-theme.git",
+    "jolharg-theme": "git+https://git@github.com/danwdart/jolharg-theme.git",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "serve": "^9.2.0"
