--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   },
   "homepage": "https://github.com/danwdart/dandart#readme",
   "devDependencies": {
-    "gh-pages": "^2.0.0",
+    "gh-pages": "^2.0.1",
     "jstransformer-markdown-it": "^2.1.0",
     "pug": "^2.0.3",
     "pug-cli": "^1.0.0-alpha6",
     "uncss": "^0.16.2"
   },
   "dependencies": {
-    "@jolharg/website-theme": "^0.0.1",
+    "@jolharg/website-theme": "0.0.3",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.5",
