--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
   },
   "homepage": "https://github.com/danwdart/dandart#readme",
   "devDependencies": {
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^2.1.1",
     "jstransformer-markdown-it": "^2.1.0",
     "pug": "^2.0.4",
     "pug-cli": "^1.0.0-alpha6",
-    "uncss": "^0.17.0"
+    "uncss": "^0.17.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.9.0",
+    "@fortawesome/fontawesome-free": "^5.12.0-1",
     "@jolharg/website-theme": "^0.0.5",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
-    "serve": "^11.1.0"
+    "popper.js": "^1.16.0",
+    "serve": "^11.2.0"
   }
 }
